2002-05-31  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=83545
	* mime-types-model.c (mime_types_model_iter_parent) : Use the child
	  not the result.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (get_category_description) : put things in Misc if
	  they have no defined category.
	(get_category_name) : ditto.

2002-05-24  Satyajit Kanungo <satyajit.kanungo@wipro.com>

	* file-types-capplet.c : Changed the help file link
	  to get the help document from user-guide.

2002-05-24  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_category_info_load_all) : make this more paranoid.
	* mime-category-edit-dialog.c (update_subcategories) : Move this over
	  here.

2002-05-17  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c (mime_category_info_using_custom_app) : add some
	  protection.

2002-05-08  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=17728
	(mime_type_info_save): a patch inspired by Archit Baweja's proposal.

2002-05-09  Archit Baweja  <bighead@users.sourceforge.net>

	* mime-type-info.c (mime_type_info_set_file_extensions): free the old
	list.

2002-05-10  jacob berkman  <jacob@ximian.com>

	* mime-type-info.c (mime_category_info_get_full_description): 
	(mime_category_info_get_full_name): work around a gcc 2.96 bug
	(fixes #77121)

2002-05-08  Jody Goldberg <jody@gnome.org>

	* file-types-capplet.c (cb_file_type_dialog_response) : fix path to
	help.

	http://bugzilla.gnome.org/show_bug.cgi?id=81030
	* service-info.c (fill_service_apps) : we don't own the app, don't
	  free it.

2002-04-30  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=80327
	* service-edit-dialog.c (program_changed_cb) : Doh! If the current
	tree selection is not a service then the app can be null.

2002-04-26  Jody Goldberg <jody@gnome.org>

	* service-edit-dialog.c (populate_app_list) : always populate the
	  details fields so a user can see what they selected.