@@ -1,5 +1,12 @@
 2002-05-31  Jody Goldberg <jody@gnome.org>
 
+	* mime-type-info.c (get_category_name) : disable debug spew.
+
+	* model-entry.c (model_entry_insert_child) : order the categories
+	nicely.
+
+2002-05-31  Jody Goldberg <jody@gnome.org>
+
 	http://bugzilla.gnome.org/show_bug.cgi?id=83545
 	* mime-types-model.c (mime_types_model_iter_parent) : Use the child
 	  not the result.
